# SR_Manipulator_V2

./: .gitignore  README.md  plot.py
kachau_ws/src/robot_moveit_config/: .setup_assistant  package.xml
kachau_ws/src/robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  (+1 more)
kachau_ws/src/rover_kachau/: CMakeLists.txt  package.xml
kachau_ws/src/rover_kachau/config/: rover_bridge.yaml  rover_controllers.yaml
kachau_ws/src/rover_kachau/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
kachau_ws/src/rover_kachau/meshes/dae/: Cube.001.dae  Cube.019.dae  Cylinder.001.dae  Cylinder.002.dae  Cylinder.003.dae  Cylinder.004.dae  Cylinder.005.dae  Cylinder.006.dae  Cylinder.007.dae  Cylinder.008.dae  Cylinder.009.dae  Cylinder.010.dae  Cylinder.013.dae
kachau_ws/src/rover_kachau/robots/: robot.urdf.xacro
kachau_ws/src/rover_kachau/rviz/: robot.rviz
kachau_ws/src/rover_kachau/urdf/: ros2_control.urdf.xacro
kachau_ws/src/rover_kachau/urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
kachau_ws/src/rover_kachau/urdf/base/: robot_base.urdf.xacro
kachau_ws/src/rover_kachau/urdf/sensors/: camera.urdf.xacro  gps.urdf.xacro  gpu_lidar.urdf.xacro  imu_sensor.urdf.xacro  sensors.urdf.xacro
kachau_ws/src/rover_kachau/urdf/tank/: rover_tank.urdf.xacro
kachau_ws/src/rover_kachau/urdf/utils/: utils.urdf.xacro
kachau_ws/src/rover_kachau/urdf/wheels/: rover_wheel.urdf.xacro
modelo/: rover.blend
rosbag_kachau/: metadata.yaml
