<?xml version="1.0"?>
<package format="3">
  <name>rover_kachau</name>
  <version>0.0.0</version>
  <description>Rover robot package</description>

  <maintainer email="r.castilla.2023@alumnos.urjc.es">rumbahuh</maintainer>
  <license>GNU GPL v3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
